<resources>
    <string name="app_name">Agenda</string>


    <string name="add">Novo</string>
    <string name="save">Salvar</string>


    <string name="patient">Paciente</string>

    <string name="registerScheduling">Agendamento</string>

    <string name="descriptinScheduling">Procedimento</string>

    <string name="dateScheduling">Data agendamento</string>


    <string name="patientName">Nome do Paciente</string>

    <string name="messageNameRequired">Nome do Paciente é obrigatório!</string>

    <string name="messageRequired">Obrigatório!</string>


    <string name="register">Registrar</string>

    <string name="registerArrival">Registrar chegada</string>

    <string name="patientScheduled">Agendado</string>
    <string name="patientAttended">Atendido</string>
    <string name="patientMissing">Faltante</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>




</resources>
